# openem-corpus

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  LICENSE-APACHE  LICENSE-CC-BY-SA  Makefile  README.md  REVIEWING.md  eval_baseline_v2.json  eval_expanded_v2.json  eval_final_v2.json  pyproject.toml  requirements.txt
.claude/agents/: clinical-validator.md  condition-compiler.md  cross-reference-checker.md  evidence-reviewer.md  gap-analyst.md  integration-tester.md  presentations-compiler.md  sourcing-auditor.md
.claude/commands/: audit-corpus.md  audit-expansion.md  compile-condition.md  (+3 more)
data/: abem_mapping.yaml
docs/: ARCHITECTURE.md  CORPUS_DETAILS.md
evaluation/: retrieval_eval_363.json  retrieval_eval_370.json  retrieval_ground_truth.jsonl  scan_repos_v051.json
experiments/: run_log.jsonl
review/: QUICK_START.md  RED_TEAM_CHECKLIST.md  tier_a_review_cards.md  tier_a_review_cards.yaml
reviewers/: assignments.yaml  registry.yaml
schemas/: condition.schema.yaml  presentation.schema.yaml
scripts/: analyze_impact.py  apply_eval_properties.py  assign_reviews.py  audit.py  build_index.py  check_doc_counts.py  check_index_freshness.py  diversity_metrics.py  eval_retrieval.py  generate_fhir.py  ingest_eval_findings.py  migrate_v2.py  openem_adapter.py  prefill_review.py  quality_gate.py  query_index.py  red_team_review.py  review_dashboard.py  review_status.py  scan_repos.py  stats.py  update_validation_dates.py  validate.py
tests/: conftest.py  test_audit.py  test_bridge.py  test_build_index.py  test_content.py  test_fhir.py  test_index.py  test_insights.py  test_schema.py
(+414 files in other folders)
